tests/derive/wrong_lifetime.stderr
error: lifetime may not live long enough
 --> $DIR/wrong_lifetime.rs:3:10
  |
3 | #[derive(Query)]
  |          ^^^^^
  |          |
  |          lifetime `'q` defined here
  |          type annotation requires that `'q` must outlive `'static`
  |
  = note: this error originates in the derive macro `Query` (in Nightly builds, run with -Z macro-backtrace for more info)
